--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     testImplementation(platform('org.junit:junit-bom:5.7.2'))
     testImplementation('org.junit.jupiter:junit-jupiter:5.7.2')
     implementation 'org.springframework.kafka:spring-kafka:2.7.6'
+    implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka:3.1.3'
+    implementation 'org.springframework.cloud:spring-cloud-stream:3.1.3'
+    testImplementation 'org.springframework.cloud:spring-cloud-stream:3.1.3'
 }
 
 tasks.withType(JavaCompile) {
